platform/istio/database.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: identities-database
  namespace: postgres
spec:
  hosts:
  - identities-database
  http:
    - route:
      - destination:
          host: identities-database
          port:
            number: 5432
