platform/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dakasa-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dakasa
spec:
  hosts:
  - "*"
  gateways:
  - dakasa-gateway
  http:
  - match:
    - uri:
        exact: /api/login
    - uri:
        prefix: /api/register
    route:
    - destination:
        host: identities
        port:
          number: 9080
